fix: state text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,6 @@
 }
 
 .state {
-  text-align: center;
   grid-column: 1/2;
 }
 
